--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="action_settings">Settings</string>
     <string name="movies">Movies</string>
-    <string name="favorits">Favorits</string>
+    <string name="favorits">Favorites</string>
 
     <string name="language">en-US</string>
 
